# chuan

./: ipxx.txt  readme.md  readme.txt
chuan_nav_ws/: auto_nav.sh  hokuyo.sh  hokuyo_rviz.sh  nav_rviz.sh  readme.txt  turtlebot_key.sh  turtlebot_qidong.sh  vlp16_rviz.sh  vlp16_start.sh
chuan_nav_ws/src/chuan_bringup/: CMakeLists.txt  package.xml  readme.txt
chuan_nav_ws/src/chuan_bringup/launch/: chuan_urdf_xx.launch  vlp16_tf_start.launch
chuan_nav_ws/src/chuan_bringup/urdf/: basefoot_xx.urdf.xacro  chuan.urdf.xacro  chuan_xx.urdf.xacro  properties_xx.urdf.xacro
chuan_nav_ws/src/chuan_navigation/: CMakeLists.txt  package.xml  readme.md
chuan_nav_ws/src/chuan_navigation/launch/: nav_chuan.launch  nav_chuan_hokuyo.launch  nav_chuan_vlp16.launch  nav_hokuyo_movebase.launch  nav_odom.launch  nav_vlp_movebase.launch  nuclear_detection_amcl.launch
chuan_nav_ws/src/chuan_navigation/param/: costmap_common_params.yaml
chuan_nav_ws/src/gps_umd-master/: .travis.yml
chuan_nav_ws/src/gps_umd-master/gps_common/: CHANGELOG.rst  CMakeLists.txt  package.xml
chuan_nav_ws/src/hokuyo_node-indigo-devel/launch/: hokuyo_laser.launch  hokuyo_rviz.launch
chuan_nav_ws/src/hokuyo_node-indigo-devel/rviz/: hokuyo_image.rviz
chuan_nav_ws/src/scan_speed/: CMakeLists.txt  package.xml
chuan_nav_ws/src/scan_speed/launch/: gps_imu_tf.launch  gps_location.launch  odom_tf.launch  start_demo.launch
chuan_nav_ws/src/scan_speed/msg/: ScanTestSpeed.msg
chuan_nav_ws/src/scan_speed/src/: gps.cpp  gps_chafen.cpp  gps_jiuz.cpp  gps_mini.cpp  gps_newbuy.cpp  tf_changemap.cpp  tf_changemaptd.cpp
chuan_nav_ws/src/turtlebot_viz-indigo/: README.md
chuan_nav_ws/src/turtlebot_viz-indigo/turtlebot_dashboard/: CHANGELOG.rst  package.xml
chuan_nav_ws/src/turtlebot_viz-indigo/turtlebot_interactive_markers/: CHANGELOG.rst  package.xml
chuan_nav_ws/src/turtlebot_viz-indigo/turtlebot_rviz_launchers/: CHANGELOG.rst  package.xml
chuan_nav_ws/src/turtlebot_viz-indigo/turtlebot_viz/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
chuan_ws/: 3dbox_rviz.sh  box_gensui.sh  box_pub.sh  chuan_joy.sh  chuan_start.sh  chuan_usb.rules  control_nav2cv.sh  cv.sh  flag_cv2nav.sh  gps_usb.rules  nav_control.sh  nav_xx.sh  readme.txt  readme_xx.txt  test_3dlidar_flag_pub.sh  test_3dlidar_gensui.sh  test_3dlidar_pub.sh  test_flag_nav2cv.sh  test_pub.sh  tuolian_test_pub.sh  turtlebotkey_chuan.sh  xbox_joy.launch
chuan_ws/ src/ chuan_nav/ src/: test_flag_nav2cv.cpp
chuan_ws/src/: box_lidar.sh  hokuyo.rules  hokuyo.sh  keboard_chuan.sh  reademe.txt  redme.txt  scan_cli.sh  turtlebotkey_board.sh
chuan_ws/src/chuan_control/: CMakeLists.txt  package.xml
chuan_ws/src/chuan_control/include/: simplegpio.h
chuan_ws/src/chuan_control/launch/: chuan_joy.launch  chuan_start.launch  turtle_joy.launch
chuan_ws/src/chuan_control/src/: box_lidar_gensui.cpp  box_lidar_points.cpp  box_yolo.cpp  chuan_board.cpp  chuan_xboxjoy.cpp  flag_client.cpp  flag_server.cpp  joy_chuan_pi3.cpp  keyboard_chuan_tk1.cpp  power.cpp  turtle_teleop_joy.cpp  uart_test.cpp
chuan_ws/src/chuan_nav/: CMakeLists.txt  jiuzhouhu_goal.txt  package.xml
chuan_ws/src/chuan_nav/launch/: control_nav2cv.launch  control_norviz.launch  nav_xx.launch
chuan_ws/src/chuan_nav/src/: flag_cv2nav.cpp  flag_tuolian_pub.cpp  nav_control (copy).cpp  nav_control.cpp  nav_control1.cpp  nav_control2.cpp  nav_control3.cpp  test_flag_3dlidar_pub.cc  test_flag_nav2cv.cpp  test_flag_sub.cpp  test_nav_control.cpp
chuan_ws/src/euclidean_cluster_xx/: 3dbox_pub.launch  readme.txt
chuan_ws/src/euclidean_cluster_xx/include/: euclidean_cluster_core.h
chuan_ws/src/euclidean_cluster_xx/launch/: box_gensui.launch  box_lidar_rviz.launch  box_lidar_xx.launch
chuan_ws/src/euclidean_cluster_xx/rviz/: box_lidar.rviz
chuan_ws/src/euclidean_cluster_xx/src/: euclidean_cluster_core.cpp  euclidean_cluster_core1.cpp  euclidean_cluster_core2.cpp  euclidean_cluster_node.cpp
chuan_ws/src/pcl_test/: readme.txt
chuan_ws/src/ros_cv/: CMakeLists.txt
chuan_ws/src/ros_cv/launch/: open_camera.launch  run_sensors.launch
chuan_ws/src/serial/: CMakeLists.txt  readme_xx.txt
chuan_ws/src/serial/examples/: serial_example.cc  serial_ros.cpp  serial_ros_1.cpp  serial_ros_xx.cpp  serial_ros_xx1.cpp  serial_xx.cpp  talker_xx.cpp
chuan_ws/src/turtlebot_teleop/: CMakeLists.txt  readme_xx.txt
chuan_ws/src/turtlebot_teleop/scripts/: turtlebot_teleop_key  turtlebot_teleop_key (copy)
chuan_ws/src/xx_msgs/: CMakeLists.txt  package.xml
chuan_ws/src/xx_msgs/msg/: Flag.msg  Res.msg
chuan_ws/src/xx_msgs/srv/: Flag_xx.srv
chuan_ws/src/yujin_ocs-kinetic/: README.md
map/: jiuzhouhu.yaml
sh_xx/: _PWD_TEMP_  bag.sh  board_chuan.sh  chuan_joy.sh  chuan_power.sh~  chuan_start.sh  cv_usb_test.sh  gps_start.sh  hokuyo.sh  hokuyo.sh~  keboard_chuan.sh~  master.sh  master.sh~  power_chuan.sh  readme.txt  ros_video_save.sh  rundarknet.sh  runyoloTracker.sh  scan_cli.sh  tuolian_test_pub.sh  turtlebot_key.sh  turtlebotkey_board.sh~  vlp16_rviz.sh  vlp16_start.sh  vlp16_tf_start.sh  yolotracker.sh
(+33 files in other folders)
